--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run",
-    "e2e": "start-server-and-test start http://localhost:3000 cypress",
-    "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless"
+    "test": "vitest"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
@@ -42,7 +38,6 @@
     "@types/node": "16.11.11",
     "@types/react-datepicker": "^4.3.4",
     "autoprefixer": "^10.4.0",
-    "cypress": "^10.7.0",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.6",
     "postcss": "^8.4.5",
