--- a/package.json
+++ b/package.json
@@ -6,31 +6,37 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.6",
+    "@heroicons/react": "^2.0.12",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
     "@types/recharts": "^1.8.23",
     "babel-preset-next": "^1.4.0",
     "chart.js": "^3.8.0",
-    "framer-motion": "^6.3.11",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
+    "framer-motion": "^7.5.4",
     "graphql": "^16.2.0",
     "js-cookie": "^3.0.1",
     "jsbarcode": "^3.11.5",
     "next": "^12.1.6",
     "next-progress": "^2.2.0",
-    "next-pwa": "^5.5.4",
+    "next-pwa": "^5.6.0",
     "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.1.0",
     "react-to-print": "^2.14.4",
     "react-toastify": "^9.0.4",
-    "recharts": "^2.1.12",
+    "recharts": "^2.1.14",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -38,11 +44,12 @@
     "@types/node": "16.11.11",
     "@types/react-datepicker": "^4.3.4",
     "autoprefixer": "^10.4.0",
+    "cypress": "^10.10.0",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.6",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.3",
-    "vitest": "^0.15.1"
+    "vitest": "^0.23.4"
   }
 }
